# nimbus

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  book.toml  glide.default.toml  nimbus.default.toml  rustfmt.toml
.github/workflows/: rust.yml  site.yml
doc/: chapter_1.md
doc/theme/: tweaks.css
docs/design/: shadow.md
examples/: devtool.rs  make_windows.rs
site/: astro.config.mjs  package-lock.json  package.json
site/src/: style.css
site/src/content/docs/: index.mdx
site/src/content/docs/guides/: getting-started.mdx
site/src/plugins/: remark-readme-import.ts
src/: actor.rs  app.rs  collections.rs  config.rs  layout.rs  lib.rs  log.rs  main.rs  metrics.rs  model.rs  notification_center.rs  reactor.rs  sys.rs  system.rs  util.rs
src/actor/: app.rs  layout.rs  menu_bar.rs  mod.rs  mouse.rs  notification_center.rs  raise.rs  raise_manager.rs  reactor.rs  wm_controller.rs
src/actor/app/: system.rs
src/actor/reactor/: animation.rs  main_window.rs  replay.rs  space.rs  testing.rs
src/model/: layout.rs  layout_mapping.rs  layout_tree.rs  selection.rs  size.rs  tree.rs  window.rs
src/sys/: app.rs  event.rs  executor.rs  geometry.rs  hotkey.rs  menu_bar.rs  mod.rs  observer.rs  run_loop.rs  screen.rs  space.rs  timer.rs  window_server.rs
src/system/: attribute.rs  fake.rs
