[package]
name = "nimbus-wm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nimbus"
test = false

# We don't have a need for unwinding, and aborting means we don't have to worry
# about propagating panics to the main CFRunLoop thread.
#
# However, since panic-abort-tests is not stable yet, we will always build test
# deps with panic=unwind. Therefore dev builds continue to use panic=unwind
# with a panic hook that aborts so we can reuse dependency builds.
[profile]
release.panic = "abort"

[dependencies]
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
anyhow = "1.0.83"
ascii_tree = "0.1.1"
bitflags = "2.4.1"
clap = { version = "4.5.4", features = ["derive"] }
core-foundation = "0.9.4"
core-graphics = "0.23.2"
core-graphics-types = "0.1.3"
dirs = "5.0.1"
icrate = { version = "0.1.0", features = [
    "Foundation_NSString",
    "AppKit_NSRunningApplication",
    "Foundation_NSArray",
    "AppKit_NSWorkspace",
    "AppKit",
    "Foundation_NSNotificationCenter",
    "Foundation_NSNotification",
    "Foundation_NSThread",
    "AppKit_NSScreen",
    "Foundation_NSNumber",
    "AppKit_NSWindow",
    "AppKit_NSEvent",
] }
livesplit-hotkey = "0.8.0"
rand = "0.8.5"
ron = "0.9.0-alpha.1"
rustc-hash = "2.0.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_with = "3.9.0"
slotmap = { version = "1.0.7", features = ["serde"] }
static_assertions = "1.1.0"
tokio = { version = "1.35.1", features = ["macros", "sync"] }
tokio-stream = "0.1.16"
toml = "0.8.20"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-timing = { version = "0.6.0", features = ["layer"] }
tracing-tree = { version = "0.3.0", features = ["time"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.35.1", features = ["rt", "sync", "macros"] }
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
] }
test_bin = "0.4.0"
tempfile = { version = "3.17.1", default-features = false }

[patch.crates-io]
core-foundation = { git = "https://github.com/tmandry/core-foundation-rs", branch = "master" }
core-foundation-sys = { git = "https://github.com/tmandry/core-foundation-rs", branch = "master" }
core-graphics = { git = "https://github.com/tmandry/core-foundation-rs", branch = "master" }
core-graphics-types = { git = "https://github.com/tmandry/core-foundation-rs", branch = "master" }
accessibility = { git = "https://github.com/tmandry/accessibility", branch = "master" }
accessibility-sys = { git = "https://github.com/tmandry/accessibility", branch = "master" }
